--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import "node_modules/modern-normalize/modern-normalize.css";
+
 @font-face {
   font-family: "Norse";
   src: url("./font/Norse-Bold.woff2") format("woff2"),
@@ -26,7 +28,8 @@ body {
 }
 
 .logo {
-  flex-basis: 500px;
+  flex-basis: 400px;
+  flex-grow: 1;
   background: url(./img/halie-west-25xggax4bSA-unsplash.jpg);
   background-size: cover;
   background-position: center;
@@ -68,19 +71,106 @@ body {
 
 .content {
   flex-basis: 700px;
+  flex-grow: 1;
 
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
+.content > div {
+  flex-grow: 1;
+  flex-basis: 33%;
+}
+
 .content .promotion {
   font-weight: 700;
   font-size: 24px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.promotion p {
+  padding: 0 40px 30px 40px;
 }
 
 .sign-up-form {
   background: #fff;
-  height: 30%;
   box-shadow: 7px 3px 3px 2px rgb(14 14 14 / 25%);
+  padding: 20px 40px 30px 40px;
+}
+
+.sign-up-form .input-form {
+  margin-top: 40px;
+
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.input-form p {
+  margin-right: 50px;
+  margin-bottom: 20px;
+}
+
+label {
+  margin-bottom: 3px;
+  display: block;
+  font-size: 12px;
+  font-weight: 600;
+  letter-spacing: 0.1em;
+  color: #353535;
+}
+
+input {
+  width: 250px;
+  height: 35px;
+  padding: 0 5px;
+  font-size: 18px;
+
+  border: 1px solid #e5e7eb;
+  border-radius: 5px;
+}
+
+input:focus {
+  border-color: #00f;
+  outline: none;
+  box-shadow: 3px 3px 3px  #3535352f;
+}
+
+input:invalid {
+  border-color: #f00;
+}
+
+.button-and-log-in {
+  display: flex;
+  flex-direction: column;
+
+  padding: 30px 40px 30px 40px;
+}
+
+button {
+  width: 230px;
+  height: 40px;
+  background: #596d48;
+  border: none;
+  border-radius: 5px;
+  color: #efe;
+  font-size: 16px;
+  font-weight: 600;
+  box-shadow: 1px 1px 1px 1px #35353544;
+  margin-bottom: 30px;
+}
+
+button:hover {
+  background: #404e34;
+  cursor: pointer;
+  transition-duration: 0.2s;
+}
+
+.button-and-log-in p a {
+  text-decoration: none;
+  font-weight: 600;
+  color: #596d48;
 }
